--- a/drum-kit/index.html
+++ b/drum-kit/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>JS Drum Kit</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS Drum Kit</title>
-  <link rel="stylesheet" href="style.css">
+    <body>
+        <div class="keys">
+            <div data-key="81" class="key">
+                <kbd>Q</kbd>
+                <span class="sound">clap</span>
+            </div>
+            <div data-key="87" class="key">
+                <kbd>W</kbd>
+                <span class="sound">hihat</span>
+            </div>
+            <div data-key="69" class="key">
+                <kbd>E</kbd>
+                <span class="sound">kick</span>
+            </div>
+            <div data-key="82" class="key">
+                <kbd>R</kbd>
+                <span class="sound">kick</span>
+            </div>
+            <div data-key="84" class="key">
+                <kbd>T</kbd>
+                <span class="sound">boom</span>
+            </div>
+            <div data-key="89" class="key">
+                <kbd>Y</kbd>
+                <span class="sound">ride</span>
+            </div>
+            <div data-key="85" class="key">
+                <kbd>U</kbd>
+                <span class="sound">snare</span>
+            </div>
+            <div data-key="73" class="key">
+                <kbd>I</kbd>
+                <span class="sound">tom</span>
+            </div>
+            <div data-key="79" class="key">
+                <kbd>O</kbd>
+                <span class="sound">tink</span>
+            </div>
+        </div>
 
-</head>
+        <audio data-key="81" src="sounds/clap.wav"></audio>
+        <audio data-key="87" src="sounds/hihat.wav"></audio>
+        <audio data-key="69" src="sounds/kick.wav"></audio>
+        <audio data-key="82" src="sounds/openhat.wav"></audio>
+        <audio data-key="84" src="sounds/boom.wav"></audio>
+        <audio data-key="89" src="sounds/ride.wav"></audio>
+        <audio data-key="85" src="sounds/snare.wav"></audio>
+        <audio data-key="73" src="sounds/tom.wav"></audio>
+        <audio data-key="79" src="sounds/tink.wav"></audio>
 
-<body>
-  <div class="keys">
-    <div class="key">
-      <kbd>A</kbd>
-      <span class="sound">clap</span>
-    </div>
-  </div>
-  <script>
-    window.document.addEventListener('keydown', (e) => {
-      console.log(e)
-    })
-    // window.addEventListener('keydown', function (e)  {
-    //   console.log(e);
-    // });
-
-  </script>
-</body>
-
+        <script src="script.js"></script>
+    </body>
 </html>
